css/style.css
@import url("./reset.css");
@import url("./text.css");
@import url("./960.css");

img.align-center{
    display: block;
    margin: 0px auto;
}

img.align-left{
    float: left;
}

.bordered {
    border: 2px solid #000000;
    overflow: auto;
    border-radius: 5px;
}

.wrapper{ 
    background-color: #dddcd9;
    padding-bottom: 10px;
    min-height: 550px;
}

body{
    font-family: Arial, Verdana, sans-serif;
    font-size: 100%;
    background-color: rgb(200, 200, 200);
    background-image: url("images/Cave_Floor.jpg");
}

div#nav{
    clear: both;
    color: white;
    background-color: #6d6c6a;
    border-radius: 5px;
}
div#nav ul{
    padding: 5px 0px 5px 0px;
    margin-left: 20px;
    list-style-type: none;
}

div#nav li{
    display: inline;
    margin-right: 40px;
}

div#contact{
    margin-top:10px;
}

div#contact ul{
    list-style:none;
    padding-left: 0px;
    margin-left: 0px;
}

div#contact ul li{
    border: 2px solid #000000;
    margin: 3px 0px;
    border-radius: 3px;
    padding: 0px 3px;
}
li#email{
    background-image: url("images/Mail.png");
    background-repeat: no-repeat;
    text-indent: 37px;
    background-position: 2px 2px;
}

li#linkedin{
    background-image: url("images/In.png");
    background-repeat: no-repeat;
    text-indent: 37px;
    background-position: 2px 2px;
}

li#resume{
    background-image: url("images/Resume.png");
    background-repeat: no-repeat;
    text-indent: 37px;
    background-position: 0px 2px;
}

li#github{
    background-image: url("images/Git.png");
    background-repeat: no-repeat;
    text-indent: 37px;
    background-position: 2px 2px;
}
    
div#about{
    height: 413px;
    padding: 0px 5px;
    border-radius: 3px;
}

div#about p{
    text-indent: 3em;
}

h2{
    text-align: center;
}

div#recent-posts{
    margin-top:10px;
    border-radius:5px;
    padding: 0px 3px;
}

div#recent-posts{
    text-align: center;
    padding: 5px 20px 20px 20px;
}

